# California-Housing

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: data_config.yaml
docs/: ANALYSIS.md
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/data/: make_dataset.py
src/evaluation/: evaluate_model.py
src/features/: build_features.py
src/models/: train_model.py
src/utils/: config.py
tests/: test_config.py  test_features.py
